# cpp_projects

./: .gitignore  README.md
bmp_heap/: README.md
bmp_heap/lib/: bitmap.cpp  bitmap.h  parcing.cpp  parsing.h
commandline_parser/lib/: ArgParser.cpp  Flag.cpp  Flag.h  HelpParameter.cpp  StringParameter.cpp  StringParameter.h
commandline_parser/tests/: argparser_test.cpp
hamming_archiver/lib/: hamarc.cpp  hamarc.h  hammimgcode.cpp  hammimgcode.h  parsing.cpp  parsing.h
mp3_parser/: main.cpp
mp3_parser/Frames/AbstractFrame/: Frame.cpp  Frame.h
mp3_parser/Frames/COMM/: COMM.cpp  COMM.h
mp3_parser/Frames/COMR/: COMR.cpp  COMR.h
mp3_parser/Frames/ENCR/: ENCR.cpp  ENCR.h
mp3_parser/Frames/EQU2/: EQU2.cpp  EQU2.h
mp3_parser/Frames/ETCO/: ETCO.cpp  ETCO.h
mp3_parser/Frames/GRID/: GRID.cpp  GRID.h
mp3_parser/Frames/LINK/: LINK.cpp  LINK.h
mp3_parser/Frames/OWNE/: OWNE.cpp  OWNE.h
mp3_parser/Frames/PCNT/: PCNT.cpp  PCNT.h
mp3_parser/Frames/POPM/: POPM.cpp  POPM.h
mp3_parser/Frames/POSS/: POSS.cpp  POSS.h
mp3_parser/Frames/PRIV/: PRIV.cpp  PRIV.h
mp3_parser/Frames/RBUF/: RBUF.cpp  RBUF.h
mp3_parser/Frames/SEEK/: SEEK.cpp  SEEK.h
mp3_parser/Frames/TextFrame/: TXXX.cpp  TXXX.h  TextFrame.cpp  TextFrame.h
mp3_parser/Frames/UFID/: UFID.cpp  UFID.h
mp3_parser/Frames/URLFrame/: URLFrame.cpp  URLFrame.h  WXXX.cpp  WXXX.h
mp3_parser/Frames/USER/: USER.cpp  USER.h
mp3_parser/Tags/: Tag.cpp  Tag.h  TagHeader.cpp  TagHeader.h
mp3_parser/docs/: id3v2.4.0-structure.rst
omfl_parser/: CMakeLists.txt
omfl_parser/ArgParser/: ArgParser.h  HelpParameter.h  IntParameter.cpp  IntParameter.h
omfl_parser/lib/: CheckValidation.cpp  CheckValidation.h  Parameter.cpp  Parameter.h  parser.cpp  parser.h
omfl_parser/tests/: test_format.cpp
pool_allocator/: CMakeLists.txt  main.cpp
pool_allocator/PoolAllocator/: PollAllocator.h  Pool.h
stl_algorithms/: CMakeLists.txt  main.cpp
stl_algorithms/google_tests/: CMakeLists.txt  algorithms_tests.cpp  xrange_tests.cpp  zip_tests.cpp
stl_algorithms/lib/: MyAlgorithms.h  xrange.h  zip.h
stl_circular_buffer/: CMakeLists.txt  main.cpp
stl_circular_buffer/Google_tests/: CMakeLists.txt  CycleBufferExt.cpp  CycleBufferTests.cpp
stl_circular_buffer/lib/: CircularBuffer.h  CircularBufferExt.h
uint2022_t/lib/: number.cpp  number.h
weather_forecast/: CMakeLists.txt
weather_forecast/lib/: Output.cpp  Output.h  Weather.h
word_counter/: main.cpp  test1.txt  test2.txt
(+2 files in other folders)
